--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,10 +14,13 @@
         android:text="@string/app_name"
         android:textColor="#FFFFFF"
         android:textColorLink="#FFFFFF"
+        android:textSize="48sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.424"
         tools:text="@string/app_name" />
 
     <Button
@@ -28,6 +31,7 @@
         android:backgroundTint="@color/design_default_color_background"
         android:backgroundTintMode="add"
         android:text="Login"
+        android:textColor="#FBFAFA"
         tools:layout_editor_absoluteX="158dp"
         tools:layout_editor_absoluteY="391dp" />
 
@@ -37,6 +41,7 @@
         android:layout_height="wrap_content"
         android:background="#FAF8F8"
         android:text="Sign Up"
+        android:textColor="#F6F8FA"
         tools:layout_editor_absoluteX="154dp"
         tools:layout_editor_absoluteY="449dp" />
 
