--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,35 +10,54 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="150dp"
         android:background="#00936060"
         android:text="@string/app_name"
         android:textColor="#FFFFFF"
         android:textColorLink="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:textSize="40sp"
         tools:text="@string/app_name" />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="91dp"
-        android:layout_height="50dp"
-        android:background="@color/white"
-        android:backgroundTint="@color/design_default_color_background"
-        android:backgroundTintMode="add"
-        android:text="Login"
-        tools:layout_editor_absoluteX="158dp"
-        tools:layout_editor_absoluteY="391dp" />
-
-    <Button
-        android:id="@+id/button2"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#FAF8F8"
-        android:text="Sign Up"
-        tools:layout_editor_absoluteX="158dp"
-        tools:layout_editor_absoluteY="458dp" />
+        android:orientation="vertical"
+        android:layout_centerInParent="true" >
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:paddingHorizontal="60dp"
+            android:layout_marginBottom="50dp"
+            android:background="@color/white"
+            android:textSize="30sp"
+            android:hint="@string/username" />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textAlignment="center"
+            android:background="@color/white"
+            android:textSize="30sp"
+            android:hint="@string/password" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/forgot_password"
+            android:textSize="12sp" />
+
+    </LinearLayout>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="60dp"
+        android:text="@string/sign_up" />
 
     <ImageView
         android:layout_width="48dp"
@@ -64,4 +83,4 @@
         tools:layout_editor_absoluteX="158dp"
         tools:layout_editor_absoluteY="646dp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
