--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -29,17 +29,44 @@
         android:layout_centerInParent="true" >
 
         <EditText
-            android:layout_width="wrap_content"
+            android:id="@+id/firstNameSignUp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginBottom="50dp"
+            android:layout_marginBottom="10dp"
             android:background="@color/white"
             android:fontFamily="cursive"
-            android:hint="@string/username"
-            android:paddingHorizontal="60dp"
+            android:textAlignment="center"
+            android:hint="@string/firstName"
+            android:textSize="30sp"
+            tools:ignore="TouchTargetSizeCheck"
+            android:paddingHorizontal="60dp"/>
+
+        <EditText
+            android:id="@+id/lastNameSignUp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="10dp"
+            android:background="@color/white"
+            android:fontFamily="cursive"
+            android:hint="@string/lastName"
+            android:textAlignment="center"
             android:textSize="30sp"
             tools:ignore="TouchTargetSizeCheck" />
 
         <EditText
+            android:id="@+id/emailSignUp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="10dp"
+            android:background="@color/white"
+            android:fontFamily="cursive"
+            android:hint="@string/email"
+            android:textAlignment="center"
+            android:textSize="30sp"
+            tools:ignore="TouchTargetSizeCheck" />
+
+        <EditText
+            android:id="@+id/passwordSignUp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/white"
@@ -48,13 +75,6 @@
             android:textAlignment="center"
             android:textSize="30sp"
             tools:ignore="TouchTargetSizeCheck" />
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/bahianita"
-            android:text="@string/forgot_password"
-            android:textSize="24sp" />
 
     </LinearLayout>
 
