--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -14,43 +14,46 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="150dp"
         android:background="#00936060"
-        android:fontFamily="cursive"
         android:text="@string/app_name"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#FFFFFF"
         android:textColorLink="#FFFFFF"
-        android:textSize="96sp"
+        android:textSize="70sp"
         tools:text="@string/app_name" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_centerInParent="true" >
+        android:layout_centerInParent="true"
+        android:layout_marginHorizontal="50dp"
+        android:orientation="vertical" >
 
         <EditText
             android:id="@+id/firstNameSignUp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginBottom="10dp"
+            android:paddingHorizontal="20dp"
             android:background="@color/white"
-            android:fontFamily="cursive"
             android:textAlignment="center"
             android:hint="@string/firstName"
             android:textSize="30sp"
-            tools:ignore="TouchTargetSizeCheck"
-            android:paddingHorizontal="60dp"/>
+            android:inputType="textPersonName"
+            android:maxLines="1"
+            tools:ignore="TouchTargetSizeCheck" />
 
         <EditText
             android:id="@+id/lastNameSignUp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginBottom="10dp"
+            android:paddingHorizontal="20dp"
             android:background="@color/white"
-            android:fontFamily="cursive"
             android:hint="@string/lastName"
             android:textAlignment="center"
             android:textSize="30sp"
+            android:inputType="textPersonName"
+            android:maxLines="1"
             tools:ignore="TouchTargetSizeCheck" />
 
         <EditText
@@ -58,22 +61,26 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginBottom="10dp"
+            android:paddingHorizontal="20dp"
             android:background="@color/white"
-            android:fontFamily="cursive"
             android:hint="@string/email"
             android:textAlignment="center"
             android:textSize="30sp"
+            android:inputType="textEmailAddress"
+            android:maxLines="1"
             tools:ignore="TouchTargetSizeCheck" />
 
         <EditText
             android:id="@+id/passwordSignUp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:paddingHorizontal="20dp"
             android:background="@color/white"
-            android:fontFamily="cursive"
             android:hint="@string/password"
             android:textAlignment="center"
             android:textSize="30sp"
+            android:inputType="textPassword"
+            android:maxLines="1"
             tools:ignore="TouchTargetSizeCheck" />
 
     </LinearLayout>
